make zsh the default shell

--- a/install
+++ b/install
@@ -4,3 +4,4 @@ ln -s -f ~/dotfiles/git/gitconfig ~/.gitconfig
 ln -s -f ~/dotfiles/zsh/zshrc ~/.zshrc
 
 sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+chsh -s /bin/zsh
